--- a/exhibitor-standalone/src/main/resources/buildscripts/standalone/gradle/build.gradle
+++ b/exhibitor-standalone/src/main/resources/buildscripts/standalone/gradle/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
     repositories {
+        mavenLocal()
         jcenter()
         mavenCentral()
     }
@@ -16,6 +17,7 @@ archivesBaseName = 'exhibitor'
 version = '1.5.6'
 
 repositories {
+    mavenLocal()
     jcenter()
     mavenCentral()
     maven {
