--- a/exhibitor-standalone/src/main/resources/buildscripts/standalone/gradle/build.gradle
+++ b/exhibitor-standalone/src/main/resources/buildscripts/standalone/gradle/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'com.github.johnrengelman.shadow'
 
 group = 'exhibitor'
 archivesBaseName = 'exhibitor'
-version = '1.5.6'
+version = '1.5.6-adobe'
 
 repositories {
     jcenter()
@@ -24,7 +24,7 @@ repositories {
 }
 
 dependencies {
-    compile 'com.netflix.exhibitor:exhibitor-standalone:1.5.6'
+    compile 'com.netflix.exhibitor:exhibitor-standalone:1.5.6-adobe'
 }
 
 jar {
