--- a/exhibitor-standalone/src/main/resources/log4j.properties
+++ b/exhibitor-standalone/src/main/resources/log4j.properties
@@ -3,3 +3,5 @@ log4j.rootLogger=INFO, console
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%-5p %c %x %m [%t]%n
+
+log4j.logger.org.mortbay.log=DEBUG
